--- a/styles/home.css
+++ b/styles/home.css
@@ -37,7 +37,7 @@ body {
 .btn:active {
     background-color: teal;
     box-shadow: 0 5px darkgray;
-    transform: translateY(4px);
+    transform: translateY(5px);
 }
  
 #input {
@@ -46,7 +46,9 @@ body {
     color:teal;
     border:teal solid 2px;
     border-radius: 3px;
-    font-size: 1rem;
+    font-size: 2rem;
+    height: 50px;
+    width: 80px;
 }
 
 #score { 
@@ -59,4 +61,16 @@ body {
     color: teal;
     text-shadow: 5px 5px 5px rgba(169, 169, 169, 0.74);
     margin: 30px;
+}
+
+#big-arrow{
+    font-size: 3rem;
+    text-shadow: 5px 5px 5px rgba(169, 169, 169, 0.74);
+    
+}
+
+label{ 
+    font-size: 2rem;
+    color: teal;
+    text-shadow: 5px 5px 5px rgba(169, 169, 169, 0.74);
 }
